@@ -81,11 +81,11 @@
         theme_advanced_resizing : true,
         valid_elements: "-strong/-b/-bold[class|customattributes],-em/-i/-emphasize[class|customattributes],span[id|type|class|title|customattributes|align],sub[class|customattributes|align],sup[class|customattributes|align],pre[class|title|customattributes],ol[class|customattributes],ul[class|customattributes],li[class|customattributes],a[href|name|target|title|class|id|customattributes],p[class|customattributes|align],img[src|class|alt|align|inline|id|customattributes],table[class|border|width|id|title|customattributes|ezborder|bordercolor|align],tr,th[class|width|rowspan|colspan|customattributes|align],td[class|width|rowspan|colspan|customattributes|align],div[id|type|class|title|customattributes|align],h1[class|customattributes|align],h2[class|customattributes|align],h3[class|customattributes|align],h4[class|customattributes|align],h5[class|customattributes|align],h6[class|customattributes|align],br",
         valid_child_elements: "a[%itrans_na],table[tr],tr[td|th],ol/ul[li],h1/h2/h3/h4/h5/h6/pre/strong/b/p/em/i/u/span/sub/sup/li[%itrans|#text]div/pre/td/th[%btrans|%itrans|#text]",
-        cleanup : false,
-        cleanup_serializer : 'xml',    
-        entity_encoding : 'raw',
-        remove_linebreaks : false,
-        apply_source_formatting : false,
+        // cleanup : false,
+        // cleanup_serializer : 'xml',    
+        // entity_encoding : 'raw',
+        // remove_linebreaks : false,
+        // apply_source_formatting : false,
         fix_list_elements : true,
         fix_table_elements : true,
         convert_urls : false,
