@@ -45,6 +45,9 @@ eZ Online Editor 5.0 extension Changelog
 * Documented: #15187: Keyboard shortcuts for functions in editor toolbar
 * Implemented: possibility to opt out of __setDisabled in custom TinyMCE plugins using settings.ezPlugin, patch by stevo
 * Added por-BR translation
+* Fixed #13691: Uneeded space on ezoe with IE7
+* Implemented: InlineImageIconPath[] setting for having custom icons on IsInline[<>]=image types
+* Enable TinyMCE xhtml validation to behave more like out of the box TinyMCE 
 
 5.0.0
 * Fixed regression #13650: [header] ezoe adds a level each time it is called
